tests/baselines/reference/superSymbolIndexedAccess4.errors.txt
tests/cases/conformance/expressions/superPropertyAccess/superSymbolIndexedAccess4.ts(5,16): error TS2335: 'super' can only be referenced in a derived class.


==== tests/cases/conformance/expressions/superPropertyAccess/superSymbolIndexedAccess4.ts (1 errors) ====
    var symbol = Symbol.for('myThing');
    
    class Bar {
        [symbol]() {
            return super[symbol]();
                   ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
        }
    }